All colors were changed of all screeens

--- a/app/src/main/res/layout/activity_history_results.xml
+++ b/app/src/main/res/layout/activity_history_results.xml
@@ -55,7 +55,7 @@
         android:id="@+id/date1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fecha"
+        android:text="@string/_11_02_24"
         android:fontFamily="@font/montserrat_regular"
         android:textSize="20sp"
         android:elevation="6dp"
@@ -152,7 +152,7 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fecha"
+        android:text="@string/_12_12_23"
         android:fontFamily="@font/montserrat_regular"
         android:textSize="20sp"
         android:elevation="6dp"
