--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="VioletLightActive">#D7D0F3</color>
     <color name="BlueLight">#FCFBFF</color>
     <color name="verdoso">#38BAB7</color>
+    <color name="verdoso2">#47C5C2</color>
     <color name="Primary_Normal">#47C5C2</color>
     <color name="Secondary_Normal">#2e268e</color>
     <color name="Secondary_Darker">#100d32</color>
