--- a/app/src/main/res/drawable/layered_background.xml
+++ b/app/src/main/res/drawable/layered_background.xml
@@ -14,6 +14,6 @@
             android:bottomRightRadius="0dp" />
 
         <!-- Color de fondo -->
-        <solid android:color="@color/VioletLightActive" />
+        <solid android:color="#B0EBEA" />
 
 </shape>
