--- a/app/src/main/res/layout/activity_device_stats.xml
+++ b/app/src/main/res/layout/activity_device_stats.xml
@@ -21,11 +21,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/user_s_status_device"
+            android:hint="Estatus del dispositivo"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/montserrat_regular"
-            android:textColorHint="#2E268E"
-            android:textSize="30sp"
+            android:textColorHint="@color/black"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/card"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -33,7 +33,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="400dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="150dp"
             android:layout_marginEnd="20dp"
@@ -85,6 +85,7 @@
             app:layout_constraintBottom_toBottomOf="@id/card"
             app:layout_constraintEnd_toEndOf="@id/card"
             app:layout_constraintStart_toStartOf="@id/card"
+            android:layout_marginBottom="20dp"
             android:src="@drawable/pulsera"
             android:elevation="100dp"
             android:id="@+id/bracelet_image" />
@@ -99,9 +100,12 @@
             android:src="@drawable/battery_svg"
             android:elevation="100dp"
             android:id="@+id/battery_svg"
-            android:contentDescription="@string/baterry_svg" />
+            android:contentDescription="@string/baterry_svg"
+            app:tint="@color/Red" />
 
         <TextView
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/card"
@@ -109,7 +113,7 @@
             android:layout_marginBottom="64dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:hint="@string/have_you_experience_any_issues_with_this_device" />
+            android:hint="@string/has_tenido_dificultades_con_el_dispositivo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
