--- a/app/src/main/res/layout/activity_history_calls.xml
+++ b/app/src/main/res/layout/activity_history_calls.xml
@@ -46,7 +46,7 @@
         android:textSize="20sp"
         android:elevation="6dp"
         android:layout_marginStart="20dp"
-        android:textColor="@color/Secondary_Darker"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="@id/card"
         app:layout_constraintBottom_toBottomOf="@id/card"
         app:layout_constraintStart_toStartOf="@id/card"/>
@@ -55,12 +55,12 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/time"
-        android:fontFamily="@font/montserrat_semi_bold"
-        android:textSize="20sp"
+        android:text="Hace 19 horas"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="18sp"
         android:elevation="6dp"
-        android:layout_marginStart="50dp"
-        android:textColor="@color/Secondary_Darker"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="@id/card"
         app:layout_constraintBottom_toBottomOf="@id/card"
         app:layout_constraintStart_toEndOf="@id/name1"/>
@@ -98,7 +98,7 @@
         android:textSize="20sp"
         android:elevation="6dp"
         android:layout_marginStart="20dp"
-        android:textColor="@color/Secondary_Darker"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="@id/card2"
         app:layout_constraintBottom_toBottomOf="@id/card2"
         app:layout_constraintStart_toStartOf="@id/card2"/>
@@ -107,12 +107,12 @@
         android:id="@+id/time2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/time"
-        android:fontFamily="@font/montserrat_semi_bold"
-        android:textSize="20sp"
+        android:text="Hace 3 semanas"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="18sp"
         android:elevation="6dp"
-        android:layout_marginStart="50dp"
-        android:textColor="@color/Secondary_Darker"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="@id/card2"
         app:layout_constraintBottom_toBottomOf="@id/card2"
         app:layout_constraintStart_toEndOf="@id/name2"/>
