--- a/app/src/main/res/layout/activity_history_falls.xml
+++ b/app/src/main/res/layout/activity_history_falls.xml
@@ -35,20 +35,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:text="@string/para_interpretar_el_nivel_de_una_ca_da_observa_la_gr_fica_de_aceleraci_n_en_los_ejes_x_y_y_z_un_pico_significativo_en_la_aceleraci_n_indica_el_impacto_de_la_ca_da_la_magnitud_del_pico_refleja_la_intensidad_del_impacto_cuanto_mayor_es_el_pico_mayor_es_la_fuerza_de_la_ca_da_esta_informaci_n_es_crucial_para_evaluar_la_gravedad_de_la_ca_da_y_tomar_las_medidas_necesarias_para_atender_al_paciente"
-        android:fontFamily="@font/montserrat_regular"
-        android:textSize="12sp"
-        android:elevation="6dp"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/Secondary_Darker"
-        app:layout_constraintTop_toBottomOf="@id/graph"
-        app:layout_constraintStart_toStartOf="@id/graph"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/title2"
@@ -59,238 +46,118 @@
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         android:textColor="@color/Secondary_Darker"
-        app:layout_constraintTop_toBottomOf="@id/text"
+        app:layout_constraintTop_toBottomOf="@id/graph"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Container for the list of cards -->
-    <LinearLayout
-        android:id="@+id/card_list"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card1"
         android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_height="50dp"
+        android:background="@drawable/shadow"
+        app:cardBackgroundColor="@color/Primary_Light"
+        app:cardCornerRadius="20dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/title2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <!-- First Card -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="10dp"
-            android:padding="16dp">
+    <TextView
+        android:id="@+id/name1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/manuel"
+        android:fontFamily="@font/montserrat_semi_bold"
+        android:textSize="20sp"
+        android:elevation="6dp"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="@id/card1"
+        app:layout_constraintBottom_toBottomOf="@id/card1"
+        app:layout_constraintStart_toStartOf="@id/card1"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    <TextView
+        android:id="@+id/time1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hace 19 horas"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="18sp"
+        android:elevation="6dp"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="@id/card1"
+        app:layout_constraintBottom_toBottomOf="@id/card1"
+        app:layout_constraintStart_toEndOf="@id/name1"
+        app:layout_constraintVertical_bias="0.5"/>
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nombre_1"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
+    <ImageView
+        android:id="@+id/phone_ic1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:contentDescription="@string/phone_ic"
+        android:src="@drawable/phone_ic"
+        android:elevation="6dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/card1"
+        app:layout_constraintEnd_toEndOf="@id/card1"
+        app:layout_constraintTop_toTopOf="@id/card1"/>
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ca_da_leve"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
+    <!-- Second Card -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card2"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:background="@drawable/shadow"
+        app:cardBackgroundColor="@color/Primary_Light"
+        app:cardCornerRadius="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/card1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/_1_hora"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/name2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pedro"
+        android:fontFamily="@font/montserrat_semi_bold"
+        android:textSize="20sp"
+        android:elevation="6dp"
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="@id/card2"
+        app:layout_constraintBottom_toBottomOf="@id/card2"
+        app:layout_constraintStart_toStartOf="@id/card2"/>
 
-        <!-- Repeat similar CardViews for more data -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="10dp"
-            android:padding="16dp">
+    <TextView
+        android:id="@+id/time2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hace 10 horas"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="18sp"
+        android:elevation="6dp"
+        android:layout_marginStart="30dp"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="@id/card2"
+        app:layout_constraintBottom_toBottomOf="@id/card2"
+        app:layout_constraintStart_toEndOf="@id/name2"
+        app:layout_constraintVertical_bias="0.5"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/phone_ic2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:contentDescription="@string/phone_ic"
+        android:src="@drawable/phone_ic"
+        android:elevation="6dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="@id/card2"
+        app:layout_constraintEnd_toEndOf="@id/card2"
+        app:layout_constraintTop_toTopOf="@id/card2"/>
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nombre_2"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
+    <!-- Repeat similar CardView structures for more cards -->
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ca_da_leve"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/_2_horas"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="10dp"
-            android:padding="16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nombre_3"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ca_da_leve"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/_3_horas"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="10dp"
-            android:padding="16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nombre_4"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ca_da_leve"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/_4_horas"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="10dp"
-            android:padding="16dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/nombre_5"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ca_da_leve"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/_5_horas"
-                    android:fontFamily="@font/montserrat_regular"
-                    android:textSize="16sp"
-                    android:textColor="@color/Secondary_Darker"
-                    android:layout_weight="1"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
