--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:text="SAM"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="80dp"
+
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +37,7 @@
         android:textColor="@color/black"
         android:text="ID"
         android:layout_marginTop="80dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="110dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/logo_text"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -50,7 +51,7 @@
         android:textSize="12sp"
         android:textColor="@color/black"
         android:text="Inicia sesion en tu cuenta"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +66,7 @@
         android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="90dp"
         android:elevation="5dp"
         android:fontFamily="@font/montserrat"
         android:background="@drawable/input_rectangles"
@@ -81,7 +82,7 @@
         android:hint="@string/password"
         android:importantForAutofill="no"
         android:textColor="@color/Gray"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:textColorHint="@color/Gray"
         android:textSize="20sp"
         android:padding="6dp"
@@ -98,7 +99,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:text="Iniciar sesion"
-        android:textColor="@color/Secondary_Light"
+        android:textColor="@color/white"
         android:layout_marginTop="80dp"
         android:textSize="18sp"
         android:background="@drawable/rounded_button"
@@ -152,7 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="130dp"
-        android:text="@string/sign_up_with"
+        android:text="Inicia sesion con"
         android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -165,9 +166,10 @@
     <LinearLayout
         android:id="@+id/facebook_btn"
         android:layout_marginTop="20dp"
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="20dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@drawable/rounded_corners_with_shadow"
@@ -196,9 +198,10 @@
     <LinearLayout
         android:layout_marginTop="20dp"
         android:id="@+id/google_btn"
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="20dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:background="@drawable/rounded_corners_with_shadow"
@@ -231,10 +234,10 @@
         android:fontFamily="@font/montserrat_regular"
         android:textSize="13sp"
         android:textColor="@color/black"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="70dp"
         android:text="@string/no_tienes_una_cuenta"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/facebook_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -245,11 +248,11 @@
         android:contentDescription="@string/logo"
         android:fontFamily="@font/montserrat_regular"
         android:textSize="13sp"
-        android:textColor="@color/verdoso"
-        android:layout_marginBottom="20dp"
+        android:textColor="#47C5C2"
+        android:layout_marginTop="20dp"
         android:text="Registrate"
         android:layout_marginEnd="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/google_btn"
         app:layout_constraintStart_toEndOf="@id/addaccount"
         app:layout_constraintEnd_toEndOf="parent"/>
 
