--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,111 +1,175 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:padding="16dp"
     android:background="@color/white"
     tools:context=".MainActivity2">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/logo_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="50sp"
+        android:textColor="@color/verdoso"
+        android:text="SAM"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.35"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="80dp" />
 
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="250dp"
-            android:contentDescription="@string/logo"
-            android:src="@drawable/logo_app" />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        android:text="Crea tu cuenta"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/name_input" />
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="48dp"
-            android:hint="@string/name"
-            android:importantForAutofill="no"
-            android:textColor="#9D9D9D"
-            android:textColorHint="#9D9D9D"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:fontFamily="@font/montserrat"
-            android:inputType="text"
-            android:background="@drawable/shadow"
-            android:elevation="12dp"
-            android:id="@+id/name_input"
-            android:layout_marginTop="8dp"/>
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="48dp"
-            android:hint="@string/last_name"
-            android:importantForAutofill="no"
-            android:textColor="#9D9D9D"
-            android:textColorHint="#9D9D9D"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:fontFamily="@font/montserrat"
-            android:background="@drawable/shadow"
-            android:elevation="12dp"
-            android:inputType="text"
-            android:id="@+id/last_name_input"
-            android:layout_marginTop="16dp"/>
+    <TextView
+        android:id="@+id/logo_text2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="50sp"
+        android:textColor="@color/black"
+        android:text="ID"
+        app:layout_constraintStart_toEndOf="@id/logo_text"
+        app:layout_constraintTop_toTopOf="@id/logo_text"
+        app:layout_constraintBottom_toBottomOf="@id/logo_text"
+        android:layout_marginStart="2dp" />
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="48dp"
-            android:hint="@string/email"
-            android:importantForAutofill="no"
-            android:textColor="#9D9D9D"
-            android:textColorHint="#9D9D9D"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:fontFamily="@font/montserrat"
-            android:background="@drawable/shadow"
-            android:elevation="12dp"
-            android:id="@+id/email_register_input"
-            android:layout_marginTop="16dp"
-            tools:ignore="TextFields" />
+    <EditText
+        android:id="@+id/name_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="@string/name"
+        android:importantForAutofill="no"
+        android:textColor="#9D9D9D"
+        android:textColorHint="#9D9D9D"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:elevation="6dp"
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/montserrat"
+        android:inputType="text"
+        android:background="@drawable/shadow"
+        app:layout_constraintTop_toBottomOf="@id/logo_text2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="48dp"
-            android:hint="@string/password"
-            android:importantForAutofill="no"
-            android:textColor="#9D9D9D"
-            android:textColorHint="#9D9D9D"
-            android:textSize="20sp"
-            android:padding="6dp"
-            android:fontFamily="@font/montserrat"
-            android:background="@drawable/shadow"
-            android:elevation="12dp"
-            android:inputType="textPassword"
-            android:id="@+id/password_input"
-            android:layout_marginTop="16dp"/>
+    <EditText
+        android:id="@+id/last_name_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="@string/last_name"
+        android:importantForAutofill="no"
+        android:textColor="#9D9D9D"
+        android:textColorHint="#9D9D9D"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:elevation="6dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/shadow"
+        app:layout_constraintTop_toBottomOf="@id/name_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
 
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="@string/register"
-            android:textColor="@color/Secondary_Light"
-            android:layout_marginTop="20dp"
-            android:textSize="18sp"
-            android:background="@drawable/rounded_button"
-            android:fontFamily="@font/montserrat_bold"
-            android:id="@+id/register_btn"/>
+    <EditText
+        android:id="@+id/email_register_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="@string/email"
+        android:importantForAutofill="no"
+        android:textColor="#9D9D9D"
+        android:textColorHint="#9D9D9D"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:elevation="6dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/shadow"
+        app:layout_constraintTop_toBottomOf="@id/last_name_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
 
-        <TextView
-            android:layout_width="210dp"
-            android:layout_height="20dp"
-            android:text="@string/i_have_already_an_account"
-            android:textColor="@color/black"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="132dp"
-            android:fontFamily="@font/montserrat"
-            android:textSize="16sp"/>
+    <EditText
+        android:id="@+id/password_input"
+        android:layout_width="350dp"
+        android:layout_height="48dp"
+        android:hint="@string/password"
+        android:importantForAutofill="no"
+        android:textColor="#9D9D9D"
+        android:textColorHint="#9D9D9D"
+        android:textSize="20sp"
+        android:padding="6dp"
+        android:elevation="6dp"
+        android:fontFamily="@font/montserrat"
+        android:background="@drawable/shadow"
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/email_register_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/register_btn"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="@string/register"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/montserrat_bold"
+        app:layout_constraintTop_toBottomOf="@id/password_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/already_account_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ya tienes cuenta?"
+        android:textColor="@color/black"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/register_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="132dp" />
+
+    <TextView
+        android:id="@+id/inicia_sesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Inicia sesion"
+        android:textColor="#47C5C2"
+        android:fontFamily="@font/montserrat_regular"
+        android:textSize="16sp"
+        android:layout_marginStart="140dp"
+        app:layout_constraintTop_toBottomOf="@id/register_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="132dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
