--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:gravity="top"
     android:padding="16dp"
-    android:background="@color/morao"
+    android:background="@color/verdoso2"
     android:id="@+id/Nav_Header"
     android:layout_height="120dp">
 
@@ -19,19 +19,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username"
+        android:layout_marginTop="20dp"
         android:textColor="@color/Primary_Dark"
         android:fontFamily="@font/montserrat_bold"
-        android:layout_marginStart="20sp"
+        android:layout_marginStart="30sp"
         android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/contact_information"
+        android:text="@string/cuidador"
+        android:layout_marginTop="20dp"
         android:textColor="@color/Primary_Dark"
         android:fontFamily="@font/montserrat_bold"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="20sp"
+        android:layout_marginStart="30sp"
         android:textSize="16sp"/>
 </LinearLayout>
