--- a/app/src/main/res/layout/weekly_stats.xml
+++ b/app/src/main/res/layout/weekly_stats.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/an_lisis_semanal_de_manuel"
             android:fontFamily="@font/montserrat_bold"
-            android:textColorHint="#2E268E"
+            android:textColorHint="@color/black"
             android:textSize="20sp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="110dp"
@@ -333,7 +333,7 @@
                     android:id="@+id/card_description"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="Esta es la descripción del Card. Agrega más información aquí."
+                    android:text="Esta es la descripción del Card."
                     android:textSize="14sp"
                     android:textColor="@color/black"
                     android:layout_marginTop="8dp"
