Websocket working with graphic animation of heart beat, modified implementations and stuff about gradle, gralde configs of build gradle in root and app, also settings gradle, added network_security_config.xml for the websocket ip

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -30,8 +30,7 @@
             android:layout_height="wrap_content"
             android:text="@string/paciente_manuel"
             android:textSize="32sp"
-            android:layout_marginTop="70dp"
-            android:fontFamily="@font/montserrat_bold"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -49,12 +48,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/indicatorsCardView"
-            android:layout_width="350dp"
-            android:layout_height="200dp"
-            android:background="@drawable/shadow"
-            app:cardBackgroundColor="@color/Primary_Light"
-            app:cardCornerRadius="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/subtitleTextView">
@@ -63,87 +61,91 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
                 android:padding="16dp">
 
-                <FrameLayout
-                    android:layout_width="1dp"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/pulse"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:contentDescription="@string/circulo"
-                        android:src="@drawable/circle_test"
-                        android:elevation="6dp"/>
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
                         android:src="@drawable/heart_rate_ic"
-                        app:tint="@android:color/holo_red_dark"
-                        android:layout_gravity="top|center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginEnd="5dp" />
+                        app:tint="@android:color/holo_red_dark" />
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="8dp"
+                        app:cardBackgroundColor="#FFEBEE"
+                        app:cardCornerRadius="50dp">
+
+                        <TextView
+                            android:id="@+id/bpmTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="--"
+                            android:textColor="@android:color/holo_red_dark"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:id="@+id/bpmTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="72"
-                        android:textColor="@android:color/black"
-                        android:textSize="42sp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginTop="15dp"
-                        android:fontFamily="@font/montserrat_regular"
-                        android:layout_gravity="center" />
+                        android:text="BPM"
+                        android:textStyle="bold" />
 
-                </FrameLayout>
+                </LinearLayout>
 
-                <FrameLayout
-                    android:layout_width="1dp"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/oxigen"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:src="@drawable/circle_test"
-                        android:contentDescription="@string/circulo"
-                        android:elevation="6dp"/>
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
                         android:src="@drawable/oxigen_ic"
-                        app:tint="@android:color/holo_blue_dark"
-                        android:layout_gravity="top|center_horizontal"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginEnd="5dp" />
+                        app:tint="@android:color/holo_blue_dark" />
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="8dp"
+                        app:cardBackgroundColor="#E3F2FD"
+                        app:cardCornerRadius="50dp">
+
+                        <TextView
+                            android:id="@+id/spo2TextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="--%"
+                            android:textColor="@android:color/holo_blue_dark"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:id="@+id/spo2TextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="98%"
-                        android:textColor="@android:color/black"
-                        android:textSize="42sp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginTop="15dp"
-                        android:fontFamily="@font/montserrat_regular"
-                        android:layout_gravity="center"/>
+                        android:text="SPO2"
+                        android:textStyle="bold" />
 
-                </FrameLayout>
+                </LinearLayout>
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
-
 
         <androidx.cardview.widget.CardView
             android:id="@+id/chartsCardView"
@@ -176,12 +178,11 @@
                     android:text="Heart Rate"
                     android:textStyle="bold" />
 
-                <View
+                <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/heartRateChartView"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/holo_red_light" />
+                    android:layout_marginTop="8dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -190,12 +191,11 @@
                     android:text="SPO2 Level"
                     android:textStyle="bold" />
 
-                <View
+                <com.github.mikephil.charting.charts.LineChart
                     android:id="@+id/spo2ChartView"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:layout_marginTop="8dp"
-                    android:background="@android:color/holo_blue_light" />
+                    android:layout_marginTop="8dp"/>
 
             </LinearLayout>
 
