--- a/app/src/main/res/layout/activity_alarms_view.xml
+++ b/app/src/main/res/layout/activity_alarms_view.xml
@@ -56,6 +56,15 @@
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/Hora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:textColor="@color/Primary_Dark"
+                android:textSize="25sp" />
+
+
+            <TextView
                 android:id="@+id/nombrePaciente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
