I fixed bug and viusal flaws

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,13 +6,18 @@
     android:background="@color/white"
     tools:context=".MapActivity">
 
+    <include
+        android:id="@+id/header"
+        layout="@layout/go_back_header" />
+
     <TextView
         android:id="@+id/title_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Título Superior"
+        android:text="Ubicacion aproximada"
         android:textSize="24sp"
         android:textColor="@color/black"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
