--- a/app/src/main/res/drawable/battery_svg.xml
+++ b/app/src/main/res/drawable/battery_svg.xml
@@ -4,11 +4,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/Red"
       android:pathData="M20,10V8.33A1.34,1.34 0,0 0,18.67 7H4V17H18.67A1.34,1.34 0,0 0,20 15.67V14h2V10Z"
       android:fillAlpha="0.3"/>
 
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/Red"
       android:pathData="M4,7H3.34A1.34,1.34 0,0 0,2 8.33v7.33A1.34,1.34 0,0 0,3.33 17H4Z"/>
 </vector>
