--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -98,7 +98,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="BPM"
+                        android:text="LPM"
                         android:textStyle="bold" />
 
                 </LinearLayout>
@@ -167,7 +167,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Beat and SPO2 Graphics"
+                    android:text="Graficas"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
