I implemented history saved in check results and the map is ready

--- a/app/src/main/res/layout/activity_history_results.xml
+++ b/app/src/main/res/layout/activity_history_results.xml
@@ -79,7 +79,7 @@
         app:layout_constraintStart_toStartOf="@id/card"/>
 
     <TextView
-        android:id="@+id/spo2_value1"
+        android:id="@+id/bpmTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_90_spo2"
@@ -104,10 +104,10 @@
         android:layout_marginBottom="10dp"
         android:textColor="@color/Secondary_Darker"
         app:layout_constraintBottom_toBottomOf="@id/card"
-        app:layout_constraintStart_toEndOf="@id/spo2_value1"/>
+        app:layout_constraintStart_toEndOf="@id/bpmTextView"/>
 
     <TextView
-        android:id="@+id/pulse_value1"
+        android:id="@+id/spo2TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_100_lpm"
@@ -120,7 +120,6 @@
         android:textColor="@color/Secondary_Darker"
         app:layout_constraintBottom_toBottomOf="@id/card"
         app:layout_constraintStart_toEndOf="@id/heart1"/>
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card2"
