--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -10,8 +10,8 @@
     <!-- Icono del menú (hamburguesa) -->
     <ImageView
         android:id="@+id/rayas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginTop="30dp"
         android:src="@drawable/baseline_menu_24"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,8 @@
     <!-- Icono de notificación -->
     <ImageView
         android:id="@+id/notificacion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:src="@drawable/notification_icon"
         app:layout_constraintBottom_toBottomOf="@id/rayas"
         app:layout_constraintEnd_toEndOf="parent"
